Item2930: fixes problem on Firefox Mac
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN/twikiplugins@12226 a00a5322-12db-0310-a70b-8735589c885e

--- a/PatternSkin/pub/TWiki/PatternSkin/print.css
+++ b/PatternSkin/pub/TWiki/PatternSkin/print.css
@@ -1,5 +1,8 @@
 @media print {
 	/* Layout */
+	.clear {
+		clear:none; /* otherwise firefox cuts off tables */
+	}	
 	#patternScreen,
 	#patternPageShadow, 
 	#patternPage {
@@ -60,6 +63,9 @@
 	table a:link:after,
 	table a:visited:after {
 		content:"";
+	}
+	table {
+		page-break-inside:avoid;
 	}
 	*/
 	
